# marketing-recommendation

./: .coveragerc  README.md  eda.ipynb  full_pipeline.ipynb  pyproject.toml  test_data_create.ipynb
src/main/: evaluate_model.py  feature_selection.py  load_model.py  predict.py  preprocess_data.py  train_model.py  train_model_optimized.py  util.py
src/tests/: test_feature_selection.py  test_preprocess_data.py  test_util.py
src/tests/data/: attribution_path_data.feather  user_feature_data.feather
