[tool.poetry]
name = "senior data scientist task"
version = "0.1.0"
description = ""
authors = ["Bhaskar <bha6kar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
ipykernel = "^6.26.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.0"
pyarrow = "^14.0.1"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
xgboost = "^2.0.2"
tensorflow = "^2.15.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
scikeras = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
